# mocari

./: .gitattributes  .gitignore  ACHIEVEMENT.md  Cargo.toml  DESKTOP_PET_USAGE.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE.md  README.md  Trunk.toml  a.md  index.html  test_desktop_pet.sh
docs/superpowers/plans/: 2026-07-17-cubism-full-compat.md  2026-07-17-more-cubism-runtime-features.md  2026-07-18-high-level-wgpu-api.md  2026-07-18-mcp-server.md  2026-07-19-ai-plugin-system.md
docs/superpowers/specs/: 2026-07-17-cubism-full-compat-design.md  2026-07-17-mcp-server-design.md  2026-07-17-more-cubism-runtime-features-design.md  2026-07-18-high-level-wgpu-api-design.md  2026-07-19-ai-plugin-design.md
examples/: desktop_pet.rs  memory_benchmark.rs  show_model.rs  show_model_raw.rs  simple.rs
examples/web_demo/: index.html  main.rs  serve.py  server.py
src/: assets.rs  buffer_pool.rs  error.rs  expression.rs  lib.rs  motion.rs  runtime.rs  streaming_texture.rs
src/ai/: driver.rs  error.rs  mod.rs  model_json.rs  rigger.rs
src/auto/: breath.rs  eye_blink.rs  lip_sync.rs  mod.rs  mouse_tracker.rs
src/core/: art_mesh.rs  blend.rs  deformers.rs  ids.rs  interpolation.rs  math.rs  mod.rs  physics.rs
src/engine/: context.rs  desktop_pet.rs  mod.rs  model.rs  plugin.rs  render.rs  web.rs
src/json/: expression3.rs  mod.rs  model3.rs  motion3.rs  physics3.rs  pose3.rs  userdata3.rs
src/mcp/: creator.rs  mod.rs  runtime.rs  session.rs  tools.rs
src/moc3/: art_meshes.rs  canvas.rs  compose.rs  counts.rs  deformers.rs  draw_order_groups.rs  drawable.rs  glues.rs  header.rs  ids.rs  keyform_bindings.rs  keyforms.rs  mesh_build.rs  mod.rs  offscreen.rs  offsets.rs  parse.rs  parts.rs
src/render/: mod.rs  wgpu.rs
src/render/common/: clipping.rs  mod.rs  vertex.rs
src/render/shaders/: live2d.wgsl  live2d_masked.wgsl  mask.wgsl
src/render/wgpu/: buffers.rs  clipping.rs  draw.rs  mod.rs  pipeline.rs  texture.rs
test/: creator_handlers.rs  dispatch.rs  mcp.rs  runtime_handlers.rs  server_info.rs  session.rs
tests/: core.rs  core_blend.rs  core_deformers.rs  core_interpolation.rs  engine.rs  expression3.rs  ids.rs  json.rs  mcp_server.rs  mcp_tests.rs  moc3_art_meshes.rs  moc3_canvas.rs  moc3_counts.rs  moc3_drawable_mesh.rs  moc3_header.rs  moc3_ids.rs  moc3_offsets.rs  moc3_parsing.rs  motion3.rs  physics3.rs  physics_math.rs  pose3.rs  render_common.rs  runtime.rs  sample_zip.rs  wgpu_renderer.rs
tests/compat/: main.rs  model3_parsing.rs  motion3_curve_sampling.rs  physics3_parsing.rs  runtime_integration.rs
tests/compat/fixtures/: motion3_baseline.tsv
tests/engine/: model_bounds.rs
tests/mcp/: creator_handlers.rs  dispatch.rs  helpers.rs  main.rs  runtime_handlers.rs  server_info.rs  session.rs
tools/live2d-automation/: Cargo.toml
tools/live2d-automation/src/: config.rs  export.rs  face_detect.rs  generators.rs  layer_gen.rs  lib.rs  main.rs  mesh.rs  motion.rs  physics.rs  pipeline.rs  rigging.rs  types.rs
