[package]
name = "mocari"
version = "0.4.0"
edition = "2024"
description = "A pure Rust Live2D/Cubism-compatible runtime"
license = "MIT"
repository = "https://github.com/Eatgrapes/Mocari"
readme = "README.md"
keywords = ["live2d", "cubism", "runtime", "renderer", "wgpu"]
categories = ["rendering", "game-development", "graphics"]
exclude = ["assets/", ".github/"]

[features]
default = []
wgpu = ["dep:wgpu", "dep:pollster", "dep:winit"]
mcp = ["dep:rmcp", "dep:tokio", "dep:clap"]
mcp-http = ["mcp", "rmcp/transport-streamable-http-server"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
png = { version = "0.18.1", features = ["zlib-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
wgpu = { version = "30.0.0", features = ["noop"], optional = true }
rmcp = { version = "2", default-features = false, features = ["server", "transport-io", "macros", "schemars"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
winit = { version = "0.30", optional = true }

[dev-dependencies]
ab_glyph = "0.2.31"
pollster = "0.4.0"
winit = "0.30.13"

[[bin]]
name = "mocari-mcp"
path = "src/bin/mocari-mcp.rs"
required-features = ["mcp"]

[[example]]
name = "show_model"
required-features = ["wgpu"]

[[example]]
name = "show_model_raw"
required-features = ["wgpu"]

[[test]]
name = "mcp"
path = "tests/mcp_tests.rs"
required-features = ["mcp"]

[[test]]
name = "wgpu_renderer"
required-features = ["wgpu"]
