[package]
name = "live2d-automation"
version = "0.1.0"
edition = "2024"
description = "Automated Live2D model generation from character images"
license = "MIT"

[dependencies]
mocari = { path = "../..", features = ["ai"] }
image = { version = "0.25", default-features = false, features = ["png"] }
spade = "2"
glam = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
